k8s/staging/postgres-12.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-12
spec:
  serviceName: postgres-12
  replicas: 1
  selector:
    matchLabels:
      app: postgres-12
  template:
    metadata:
      labels:
        app: postgres-12
    spec:
      containers:
        - name: postgres
          image: postgres:12-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pvc-12
              subPath: data
      volumes:
        - name: postgres-pvc-12
          persistentVolumeClaim:
            claimName: postgres-pvc-12
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-12
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-12
