k8s/staging/weblate.yaml
apiVersion: v1
kind: Service
metadata:
  name: weblate-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
      app: weblate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: weblate
spec:
  serviceName: weblate-service
  replicas: 1
  selector:
    matchLabels:
      app: weblate
  template:
    metadata:
      labels:
        app: weblate
    spec:
      volumes:
        - name: smtp-secret
          secret:
            secretName: smtp
        - name: weblate-pvc
          persistentVolumeClaim:
            claimName: weblate-pvc
      containers:
        - name: redis
          image: redis:6-alpine
          command: ["redis-server", "--appendonly", "yes"]
        - name: app
          image: weblate/weblate
          imagePullPolicy: Always
          volumeMounts:
            - name: smtp-secret
              mountPath: /smtp
              readOnly: true
            - mountPath: /app/data
              name: weblate-pvc
              subPath: data
          ports:
            - containerPort: 8080
